fix: remove @CrossOrigin wildcard, secure env variables